--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:background="@color/white"
     android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".Login">
 
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/img"
         android:contentDescription="TODO"
+        android:src="@drawable/img"
         tools:ignore="ContentDescription,HardcodedText" />
 
     <TextView
@@ -23,6 +23,7 @@
         android:textColor="#FF76D1FF"
         android:textSize="40sp"
         tools:ignore="HardcodedText,TextContrastCheck" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,57 +31,55 @@
         android:textSize="15sp"
         tools:ignore="HardcodedText" />
 
-<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp">
+
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/Email"
-            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">
+            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter Your Email"
+                android:inputType="textEmailAddress"
                 tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
-
 
 
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
-</LinearLayout>
+    </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        >
+        android:padding="20dp">
+
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/Password"
-            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">
+            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter Your Password"
+                android:inputType="textPassword"
                 tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
-
 
 
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -114,7 +113,11 @@
 
     </LinearLayout>
 
-
+    <Button
+        android:id="@+id/dummyButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Dummy" />
 
 
 </LinearLayout>
