--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:padding="5dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -27,24 +28,27 @@
                 android:textSize="20sp"/>
 
             <TextView
+                android:id="@+id/cdLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:text="B-50,SMRUTICHSNEW PANVEL"/>
         </LinearLayout>
 
         <LinearLayout
+            android:padding="5dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Garbage Type: "
                 android:textStyle="bold"
                 android:textSize="20sp"/>
 
             <TextView
+                android:id="@+id/cdGarbageType"
                 android:layout_width="wrap_content"
                 android:layout_height="75dp"
                 android:text="Inorganic waste"/>
@@ -56,17 +60,43 @@
     </LinearLayout>
 
     <LinearLayout
+        android:padding="5dp"
         android:layout_width="200dp"
-        android:layout_height="175dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="end">
 
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/cdImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="10dp"
             tools:srcCompat="@tools:sample/avatars" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_gravity="bottom"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/green"
+            android:layout_width="75dp"
+            android:textSize="10sp"
+            android:layout_height="match_parent"
+            android:text="ACCEPT"/>
+
+        <Button
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/red"
+            android:layout_width="75dp"
+            android:textSize="10sp"
+            android:layout_height="match_parent"
+            android:text="REJECT" />
     </LinearLayout>
 
 
