--- a/app/src/main/res/menu/worker_menu.xml
+++ b/app/src/main/res/menu/worker_menu.xml
@@ -7,6 +7,11 @@
         android:title="Home"
         />
     <item
+        android:id="@+id/worker_notification"
+        android:icon="@drawable/baseline_notifications_24"
+        android:title="Notifications"
+        />
+    <item
         android:id="@+id/worker_profile"
         android:icon="@drawable/baseline_person_24"
         android:title="Profile"
