--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -12,7 +12,8 @@
       android:layout_width="205dp"
       android:layout_height="96dp"
       android:text="AdminLogon"
-      android:textSize="50dp"
+      android:textSize="30dp"
+      android:textAlignment="center"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
