--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,84 +31,84 @@
         android:textSize="15sp"
         tools:ignore="HardcodedText" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="20dp">-->
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/Email"
-            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/Email"-->
+<!--            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Enter Your Email"
-                android:inputType="textEmailAddress"
-                tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
-
-
-        </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:hint="Enter Your Email"-->
+<!--                android:inputType="textEmailAddress"-->
+<!--                tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />-->
 
 
-    </LinearLayout>
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/Password"
-            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Enter Your Password"
-                android:inputType="textPassword"
-                tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
+<!--    </LinearLayout>-->
 
 
-        </com.google.android.material.textfield.TextInputLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="20dp">-->
+
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/Password"-->
+<!--            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:hint="Enter Your Password"-->
+<!--                android:inputType="textPassword"-->
+<!--                tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />-->
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp">
-
-        <Button
-            android:id="@+id/LoginButton"
-            style="@android:style/Widget.Material.Light.Button"
-            android:layout_width="250dp"
-            android:layout_height="72dp"
-            android:background="#404040"
-            android:drawableStart="@drawable/common_google_signin_btn_icon_light_focused"
-            android:text="LOGIN"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.864"
-            tools:ignore="HardcodedText,VisualLintButtonSize" />
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
 
+<!--    </LinearLayout>-->
 
-    </LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="20dp">-->
+
+<!--        <Button-->
+<!--            android:id="@+id/LoginButton"-->
+<!--            style="@android:style/Widget.Material.Light.Button"-->
+<!--            android:layout_width="250dp"-->
+<!--            android:layout_height="72dp"-->
+<!--            android:background="#404040"-->
+<!--            android:drawableStart="@drawable/common_google_signin_btn_icon_light_focused"-->
+<!--            android:text="LOGIN"-->
+<!--            android:textSize="18sp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.494"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.864"-->
+<!--            tools:ignore="HardcodedText,VisualLintButtonSize" />-->
+
+
+
+<!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="373dp"
-        android:layout_height="wrap_content"
+        android:layout_height="243dp"
         android:padding="20dp">
 
         <Button
@@ -116,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:drawableLeft="@drawable/common_google_signin_btn_icon_light_normal"
-
+            android:layout_gravity="center"
             android:text="Sign In With Google" />
     </LinearLayout>
 
