--- a/app/src/main/res/layout/cardview_notice.xml
+++ b/app/src/main/res/layout/cardview_notice.xml
@@ -13,15 +13,25 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView1"
+
+            android:id="@+id/noticeTimestamp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:text="Notice"
-            android:textStyle="italic"
+            android:layout_height="25dp"
+            android:background="@color/purple_700"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:background="@color/purple_700"/>
+            android:text="12 am ndsacodsoc"
+            android:textSize="14sp"/>
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingStart="10dp"-->
+<!--            android:text="Notice"-->
+<!--            android:textStyle="italic"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="20sp"-->
+<!--            android:background="@color/purple_700"/>-->
 
         <TextView
             android:paddingStart="10dp"
@@ -31,6 +41,8 @@
             android:textSize="18sp"
             android:textStyle="italic"
             android:text="DONFONEFWNON ODJSIXNFNDNFNOWSND DINSFNSFNJDNNFSDSFEN DINSOFNOSNDNFONDN"/>
+
+
 
 
     </LinearLayout>
