uploads location to the db in cordinates(issue activity_issue.xml)

--- a/app/src/main/res/layout/activity_issue.xml
+++ b/app/src/main/res/layout/activity_issue.xml
@@ -13,6 +13,7 @@
         android:layout_height="23dp"
         android:layout_marginTop="80dp"
         android:text="Type Of Garbage"
+
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.052"
@@ -55,20 +56,45 @@
         app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/locshow"
+        android:layout_width="240dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="16dp"
+        android:text="TextView"
+        android:textSize="13sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/Garbage_type"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/editTextTextPostalAddress2"
-        android:layout_width="350dp"
+        android:layout_width="253dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="textPostalAddress"
+        android:hint="Current Address"
         app:layout_constraintBottom_toTopOf="@+id/Garbage_type"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck"
-        tools:visibility="Add your address" />
+        />
+    <Button
+        android:id="@+id/getloc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Location"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/Garbage_type"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintStart_toEndOf="@+id/editTextTextPostalAddress2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.594" />
 
     <Button
         android:id="@+id/post"
@@ -119,7 +145,11 @@
             android:layout_width="match_parent"
             android:layout_height="298dp"
             tools:srcCompat="@tools:sample/avatars"/>
+
+
     </LinearLayout>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
