--- a/app/src/main/res/layout/fragment_worker_notification.xml
+++ b/app/src/main/res/layout/fragment_worker_notification.xml
@@ -17,4 +17,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
         tools:listitem="@layout/cardview_notice" />
+
+
+    <TextView
+        android:id="@+id/noNoticeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        android:visibility="gone"
+        android:textStyle="italic"
+        android:textColor="@color/purple_700"
+        android:gravity="center"
+        android:textSize="35sp"
+        android:text="No Notices Yet !"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
