--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -21,6 +21,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/locationTxtView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Location: "
@@ -41,6 +42,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/garbageTypeTxtView"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Garbage Type: "
@@ -65,6 +67,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="end">
+
+
+        <Button
+            android:id="@+id/submitBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right|center"
+            android:layout_gravity="bottom|center"
+            android:visibility="gone"
+            android:foregroundGravity="bottom"
+            android:text="Submit On Completion"
+            android:textAlignment="center"/>
 
 
         <ImageView
