--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -14,6 +14,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/submitImageView"
+            android:layout_width="match_parent"
+            android:layout_height="190dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:padding="10dp"
+            tools:srcCompat="@tools:sample/avatars" />
+
         <LinearLayout
             android:padding="5dp"
             android:layout_width="200dp"
@@ -68,17 +77,32 @@
         android:orientation="vertical"
         android:layout_gravity="end">
 
-
         <Button
-            android:id="@+id/submitBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="right|center"
+            android:id="@+id/takePhotoBtn"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:layout_margin="15dp"
             android:layout_gravity="bottom|center"
             android:visibility="gone"
             android:foregroundGravity="bottom"
-            android:text="Submit On Completion"
-            android:textAlignment="center"/>
+            android:text="Photo"
+            android:textAlignment="center"
+            android:textSize="9sp"/>
+
+
+        <Button
+            android:id="@+id/submitBtn"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:layout_margin="15dp"
+            android:layout_gravity="bottom|center"
+            android:visibility="gone"
+            android:foregroundGravity="bottom"
+            android:text="Submit"
+            android:textAlignment="center"
+            android:textSize="9sp"/>
 
 
         <ImageView
@@ -95,6 +119,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:layout_marginBottom="15dp"
             android:text="Get Location"
             android:textSize="9sp"/>
     </LinearLayout>
