--- a/app/src/main/res/layout/fragment_worker_profile.xml
+++ b/app/src/main/res/layout/fragment_worker_profile.xml
@@ -18,7 +18,7 @@
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
-            android:src="@drawable/baseline_home_24"
+            tools:src="@tools:sample/avatars"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:text=" Palash Walali" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,29 +58,10 @@
                 android:maxWidth="200dp"
                 android:layout_height="wrap_content"
                 android:scrollHorizontally="true"
-                android:text="" />
+                android:text=" palashprwa19compeng@student.mes.ac.in" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="User Type :  " />
 
-            <TextView
-                android:id="@+id/type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Books Issued :  " />
-
-            <TextView
-                android:id="@+id/booksIssue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
 
         </GridLayout>
 
